added end-game function

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 			<div class="row col-lg-12" id="sentence"></div>
 			<div class="row col-lg-12 text-center" id="feedback"></div>
 			<div class="row col-lg-12 text-center" id="target-letter"></div>
-			<div class="game-over"></div>
+			<div class="row small game-over"></div>
+			<div class="play-again"></div>
 		</div>
 		<div class="text-center keyboard-container" id="keyboard-upper-container">
 			<div class="row col-lg-12 keys-row">
@@ -137,7 +138,6 @@
 		<div class="row col-lg-12 text-center keys-row">
 			<div class="well well-lg key" id="32">Space</div>
 		</div>
-		<div class="play-again"></div>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.3.1.js"
 		integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
